data/test/regression/type_check/fail/parameter_1.v
reg r = 1;
parameter p = r;
